[tool.poetry]
name = "rkn-monitor"
version = "0.1.0"
description = "Util for monitoring IP in RKN"
authors = ["Michael Savin <jtprogru@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
